--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ certifi==2020.12.5
 chardet==4.0.0
 colorama==0.4.4
 crispy-bootstrap5==0.6
+dj-database-url==0.5.0
 Django==3.2.7
 django-crispy-forms==1.13.0
+django-heroku==0.3.1
 django-storages==1.12.2
 dnspython==2.1.0
 email-validator==1.1.2
@@ -22,6 +24,7 @@ mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
 Pillow==8.4.0
+psycopg2==2.9.1
 pycodestyle==2.7.0
 pylint==2.6.0
 python-dateutil==2.8.2
@@ -34,4 +37,5 @@ toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.2
+whitenoise==5.3.0
 wrapt==1.12.1
